# ai_workspace_event_platform

./: .gitignore  AI_Workspace_Event_Platform_v1_2.md  GUIDE.md  TODO.md  ai_workspace_event_platform_plan_v1.md  ai_workspace_event_platform_plan_v1_1.md  ai_workspace_event_platform_plan_v1_2.md  pyproject.toml  share conversation.txt
schemas/claude/: post_tool_use_v1.schema.json  pre_tool_use_v1.schema.json  stop_hook_v1.schema.json
scripts/: context_hook.py  install-hooks.sh  topic_hook.py
src/adapters/: base.py
src/analysis/: __init__.py  ast_extractor.py  call_graph.py  checker.py  db_schema_extractor.py  dynamic_capture.py  dynamic_checker.py  ir_builder.py  route_extractor.py  type_mismatch.py
src/api/: deps.py  main.py  plugin_catalog.py  settings_store.py  summarization_throttle.py
src/replay/: db.py  indexer.py  pipeline.py  snapshot.py  snapshot_models.py  snapshot_store.py  summarizer.py  topic_graph.py  topic_vectorizer.py  transcript_analyzer.py  umap_render.py  umap_runner.py
tests/: conftest.py  test_api.py  test_claude_adapter.py  test_claude_transcript.py  test_conversations_api.py  test_db_schema_extractor.py  test_dynamic_checker.py  test_event_store.py  test_internal_event_v1.py  test_replay_db.py  test_replay_indexer.py  test_replay_pipeline.py  test_replay_snapshot.py  test_replay_summarizer.py  test_route_extractor.py  test_search_api.py  test_summarize_integration.py  test_topic_graph.py  test_type_checker.py  test_umap_runner.py
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.scripts.json
(+44 files in other folders)
